--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/benwiz/sasha-http#readme",
   "dependencies": {
     "bluebird": "^3.4.7",
+    "chalk": "^1.1.3",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
     "hoek": "^4.1.0",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.4",
     "path": "^0.12.7",
     "request": "^2.79.0",
+    "streamifier": "^0.1.1",
     "supervisor": "^0.12.0",
     "vision": "^4.1.1",
     "watson-developer-cloud": "^2.18.0"
