--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
+    "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
     "hoek": "^4.1.0",
