--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "inert": "^4.1.0",
     "joi": "^10.2.2",
     "lodash": "^4.17.4",
+    "mopidy": "^0.5.0",
     "path": "^0.12.7",
     "request": "^2.79.0",
     "streamifier": "^0.1.1",
