--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "streamifier": "^0.1.1",
     "supervisor": "^0.12.0",
     "vision": "^4.1.1",
-    "watson-developer-cloud": "^2.18.0"
+    "watson-developer-cloud": "^2.18.0",
+    "words-to-num": "0.0.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
