--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "supervisor js,html server.js"
+    "start": "supervisor js,html server.js"
   },
   "repository": {
     "type": "git",
