--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "source env_vars/private.sh && source env_vars/public.sh && supervisor js,html server.js"
+    "start": "source env_vars/private.sh && source env_vars/public.sh && nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,6 @@
     "path": "^0.12.7",
     "request": "^2.79.0",
     "streamifier": "^0.1.1",
-    "supervisor": "^0.12.0",
     "vision": "^4.1.1",
     "watson-developer-cloud": "^2.18.0",
     "words-to-num": "0.0.2"
