--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
+    "hapi-swagger": "^7.7.0",
     "hoek": "^4.1.0",
     "inert": "^4.1.0",
     "joi": "^10.2.2",
