--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "electron.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "app": "source env_vars/private.sh && source env_vars/public.sh && electron .",
+    "electron": "source env_vars/private.sh && source env_vars/public.sh && electron .",
     "build": "electron-packager . sasha --out dist/ --icon \"./public/assets/wizard-hat.icns\" --overwrite",
     "dev": "source env_vars/private.sh && source env_vars/public.sh && nodemon server.js",
     "prod": "forever server.js"
