--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/benwiz/sasha-http#readme",
   "dependencies": {
+    "beepbeep": "^1.2.0",
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
+    "electron-rebuild": "^1.5.7",
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
@@ -32,8 +34,10 @@
     "joi": "^10.2.2",
     "lodash": "^4.17.4",
     "mopidy": "^0.5.0",
+    "node-record-lpcm16": "^0.2.0",
     "path": "^0.12.7",
     "request": "^2.79.0",
+    "snowboy": "^1.1.0",
     "streamifier": "^0.1.1",
     "vision": "^4.1.1",
     "watson-developer-cloud": "^2.18.0",
