--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "electron.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "electron": "electron .",
+    "electron": "./node_modules/.bin/electron .",
     "build": "electron-packager . sasha --out ../sasha-dist/ --icon \"./public/assets/wizard-hat.icns\" --overwrite",
     "dev": "source env_vars/private.sh && source env_vars/public.sh && nodemon -e html,js server.js",
     "prod": "forever server.js"
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
+    "electron-rebuild": "^1.5.7",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-minify-css": "^1.2.4",
