--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "beepbeep": "^1.2.0",
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
-    "electron": "^1.5.1",
+    "electron": "^1.6.2",
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
@@ -46,12 +46,6 @@
     "words-to-num": "0.0.2"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-strip-debug": "^1.1.0",
-    "gulp-uglify": "^2.0.1"
+    "electron-rebuild": "^1.5.7"
   }
 }
