--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
     "electron": "^1.6.2",
+    "electron-log": "^2.0.0",
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
