--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "electron": "./node_modules/.bin/electron .",
-    "build": "electron-packager . sasha --out ../sasha-dist/ --icon \"./public/assets/wizard-hat.icns\" --overwrite",
+    "build": "./node_modules/.bin/electron-packager . sasha --out ../sasha-dist/ --icon \"./public/assets/wizard-hat.icns\" --overwrite",
     "dev": "source env_vars/private.sh && source env_vars/public.sh && nodemon -e html,js server.js",
     "prod": "forever server.js"
   },
@@ -24,7 +24,6 @@
     "beepbeep": "^1.2.0",
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
-    "electron": "^1.6.2",
     "electron-log": "^2.0.0",
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
@@ -47,6 +46,8 @@
     "words-to-num": "0.0.2"
   },
   "devDependencies": {
+    "electron": "^1.6.2",
+    "electron-packager": "^8.6.0",
     "electron-rebuild": "^1.5.7"
   }
 }
