--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sasha",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "restful api http version",
   "main": "electron.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
     "electron-log": "^2.0.0",
+    "fix-path": "^2.1.0",
     "google-tts-api": "0.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
