spotify string replacement

--- a/appendages/mopidy/mopidy.conf
+++ b/appendages/mopidy/mopidy.conf
@@ -112,5 +112,5 @@ timeout = 5000
 #  .txt
 
 [spotify]
-username = bwisialowski
-password = Foofyfoo37
+username = [%SPOTIFY_USERNAME%]
+password = [%SPOTIFY_PASSWORD%]
