--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sasha",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "restful api http version",
   "main": "electron.js",
   "scripts": {
@@ -40,6 +40,7 @@
     "play": "^0.5.0",
     "request": "^2.79.0",
     "shelljs": "^0.7.7",
+    "smalltalk": "^2.2.0",
     "snowboy": "^1.1.0",
     "streamifier": "^0.1.1",
     "vision": "^4.1.1",
