--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "joi": "^10.2.2",
     "lodash": "^4.17.4",
     "mopidy": "^0.5.0",
+    "node-kmeans": "^1.1.0",
     "node-record-lpcm16": "^0.2.0",
     "path": "^0.12.7",
     "play": "^0.5.0",
