--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,3 @@
-# top-most EditorConfig file
 root = true
 
 [*]
@@ -8,6 +7,5 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-[{package.json,*.yml}]
-indent_style = space
+[*.{json,yml,md}]
 indent_size = 2
