--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,8 @@ services:
       - ./src:/sasha/src
     environment:
       SECRET_KEY: lolthisisasecretkey
-      # TWILIO_ACCOUNT: AC11c08e7ea6cb35f19ab7e535d997e2ae
-      # TWILIO_TOKEN: ${TWILIO_TOKEN}
+      FB_ACCOUNT: sasha.benwiz@gmail.com
+      FB_PASSWORD: ${FB_PASSWORD}
+      GOOGLE_SHEETS_API_CLIENT_ID: 675295018302-uh6snposhcp1bqffgatnq7n3on3h3819.apps.googleusercontent.com
+      GOOGLE_SHEETS_API_SECRET: ${GOOGLE_SHEETS_API_SECRET}
+      GOOGLE_SH
