--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
-Django==1.11.4
+beautifulsoup4==4.6.0
+certifi==2017.7.27.1
+chardet==3.0.4
+enum34==1.1.6
+fbchat==1.0.19
+idna==2.6
+lxml==3.8.0
+requests==2.18.4
+urllib3==1.22
+beautifulsoup4==4.6.0
+certifi==2017.7.27.1
+chardet==3.0.4
+enum34==1.1.6
+fbchat==1.0.19
+idna==2.6
+lxml==3.8.0
+requests==2.18.4
+urllib3==1.22
+django==1.11.4
 pytz==2017.2
+google-api-python-client==1.6.3
+httplib2==0.10.3
+oauth2client==4.1.2
+pyasn1==0.3.3
+pyasn1-modules==0.1.1
+rsa==3.4.2
+six==1.10.0
+uritemplate==3.0.0
