django secret key to .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     volumes:
       - ./src:/sasha/src
     environment:
-      SECRET_KEY: lolthisisasecretkey
+      SECRET_KEY: ${SECRET_KEY}
       FB_PASSWORD: ${FB_PASSWORD}
       GOOGLE_SHEETS_API_SECRET: ${GOOGLE_SHEETS_API_SECRET}
