--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 db.sqlite3
 .env
 google-sheets-creds.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+!.elasticbeanstalk/config.yml
