--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 8000:8000
     volumes:
       - ./src:/sasha/src
+      - ./assets:/sasha/assets
     environment:
       SECRET_KEY: ${SECRET_KEY}
       FB_PASSWORD: ${FB_PASSWORD}
