--- a/api-wrappers/node/package.json
+++ b/api-wrappers/node/package.json
@@ -10,5 +10,7 @@
   "author": "Ben Wisialowski",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "request": "^2.83.0"
   }
 }
