--- a/services/sasha-ui/package.json
+++ b/services/sasha-ui/package.json
@@ -18,5 +18,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "lambda-deploy-cli": "^1.0.4"
+  },
+  "dependencies": {
+    "nunjucks": "^3.0.1"
   }
 }
