--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-    "extends": "airbnb-base"
+  "extends": "airbnb",
+  "rules": {
+    "max-len": [1, 100, 2, { "ignoreComments": true }],
+    "no-console": 0
+  }
 }
