--- a/functions/gui/package.json
+++ b/functions/gui/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lambda-local -l src/index.js -h handler -e lambda-test-events/test.js",
-    "deploy": "node node_modules/lambda-deploy-cli/lambda-deploy-cli.js --config deploy-config.json"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ben Wisialowski",
   "license": "ISC",
@@ -16,7 +14,6 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "lambda-deploy-cli": "^1.0.4"
+    "eslint-plugin-react": "^7.4.0"
   }
 }
