--- a/functions/send-sns/package.json
+++ b/functions/send-sns/package.json
@@ -15,8 +15,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "lambda-deploy-cli": "^1.0.4"
+    "eslint-plugin-react": "^7.4.0"
   },
   "dependencies": {
     "aws-sns-publish": "^3.1.0"
