--- a/functions/map/package.json
+++ b/functions/map/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "overland-receiver",
+  "name": "sasha-ui",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,6 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-  },
-  "dependencies": {
-    "bluebird": "^3.5.1",
-    "ioredis": "^3.2.1",
-    "request": "^2.83.0"
+    "eslint-plugin-react": "^7.4.0"
   }
 }
