--- a/functions/map/package.json
+++ b/functions/map/package.json
@@ -15,5 +15,9 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "request": "^2.83.0"
   }
 }
