--- a/functions/analyze-image/package.json
+++ b/functions/analyze-image/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.4.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.157.0",
     "bluebird": "^3.5.1",
     "request": "^2.83.0"
   }
