--- a/functions/index-faces/package.json
+++ b/functions/index-faces/package.json
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "aws-sdk": "^2.157.0",
-    "bluebird": "^3.5.1",
-    "request": "^2.83.0"
+    "bluebird": "^3.5.1"
   }
 }
