--- a/functions/sensor_overland/package.json
+++ b/functions/sensor_overland/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "aws-sns-publish": "^3.1.0"
   }
 }
